[package]

name = "urpc"
version = "0.0.1"
authors = ["Keegan McAllister <kmcallister@mozilla.com>"]
repository = "https://github.com/kmcallister/urpc"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Tiny RPC framework"

[dependencies]
bufstream = "0.1"
rustc-serialize = "0"

[dev-dependencies.unix_socket]
git = "https://github.com/sfackler/rust-unix-socket"

[dependencies.bincode]
git = "https://github.com/TyOverby/bincode"
