[package]

name = "urpc"
version = "0.0.1"
authors = ["Keegan McAllister <kmcallister@mozilla.com>"]
repository = "https://github.com/kmcallister/urpc"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Tiny RPC framework"

[dependencies]
bincode = "0.4"
bufstream = "0.1"
rustc-serialize = "0"

[dev-dependencies]
libc = "0.1"
unix_socket = "0.4"
